--- a/scripts/EvasCode2.ipynb
+++ b/scripts/EvasCode2.ipynb
@@ -2846,10 +2846,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fcast_vs_obs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-75703c671e79>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0msRain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfcast_vs_obs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"silo_rain\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0meRain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfcast_vs_obs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"ens_rain\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0msTMa\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfcast_vs_obs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"silo_tmax\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'fcast_vs_obs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "sRain = fcast_vs_obs[\"silo_rain\"]\n",
+    "eRain = fcast_vs_obs[\"ens_rain\"]\n",
+    "sTMa = fcast_vs_obs[\"silo_tmax\"]\n",
+    "eTMa = fcast_vs_obs[\"ens_tmax\"]\n",
+    "sTMi = fcast_vs_obs[\"silo_tmin\"]\n",
+    "eTMi = fcast_vs_obs[\"ens_tmin\"]\n",
+    "sRad = fcast_vs_obs[\"silo_rad\"]\n",
+    "eRad = fcast_vs_obs[\"ens_rad\"]\n",
+    "\n",
+    "sns.set_style('whitegrid')\n",
+    "ax1 = sns.kdeplot(eRain, bw=0, color = 'red', shade = 'true')\n",
+    "ax1 = sns.kdeplot(sRain, bw=0, color = 'green', shade = 'true')\n",
+    "plt.show()\n",
+    "\n",
+    "sns.set_style('whitegrid')\n",
+    "ax2 = sns.kdeplot(eTMa, bw=0, color = 'blue', shade = 'true')\n",
+    "ax2 = sns.kdeplot(sTMa, bw=0, color = 'yellow', shade = 'true')\n",
+    "plt.show()\n",
+    "\n",
+    "sns.set_style('whitegrid')\n",
+    "ax3 = sns.kdeplot(eTMi, bw=0, color = 'purple', shade = 'true')\n",
+    "ax3 = sns.kdeplot(sTMi, bw=0, color = 'pink', shade = 'true')\n",
+    "plt.show()\n",
+    "\n",
+    "sns.set_style('whitegrid')\n",
+    "ax4 = sns.kdeplot(eRad, bw=0, color = 'brown', shade = 'true')\n",
+    "ax4 = sns.kdeplot(sRad, bw=0, color = 'orange', shade = 'true')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
